changed hello page a bit

--- a/firsttimeindex.html
+++ b/firsttimeindex.html
@@ -37,6 +37,7 @@
     </style>
   </head>
   <body bgcolor = #00abc1>
+    <p>Fill in the blanks/wingdings</p>
     <h1>Hello</h1>
     <h2>Can you hear me?</h2>
     <h3>I'm in California dreaming about what we used to be</h3>
