more edits to the page

--- a/firsttimeindex.html
+++ b/firsttimeindex.html
@@ -39,18 +39,18 @@
   <body bgcolor = #00abc1>
     <p>Fill in the blanks/wingdings</p>
     <h1>Hello</h1>
-    <h2>Can you hear me?</h2>
+    <h2>ooo ooo oooo oo</h2>
     <h3>I'm in California dreaming about what we used to be</h3>
-    <h4>When we were younger and free </h4>
+    <h4>oooo oo oooo ooooooo ooo oooo </h4>
     <h5>I've forgotten how it felt before the world fell at our feet</h5>
   <br>
     <h1>There's such a difference between us</h1>
     <h2 id="lyrics1">And a million miles</h2>
   <br>
     <h1>Hello from the other side</h1>
-    <h2>I must have called a thousand times</h2>
+    <h2>o oooo oooo oooooo o oooooooo ooooo</h2>
     <h3>To tell you I'm sorry for everything that I've done</h3>
-    <h4>But when I call you never seem to be home</h4>
+    <h4>ooo oooo o oooo ooo ooooo oooo oo oo oooo</h4>
   <br>
   <img src="https://lh3.googleusercontent.com/dT0SumPaV6pY2Drle9pSJW_SwXC2-8UxuN305_29zBp23SbfeU_6R2to0mcAEaLdXnOs8i4X=s192-c-e100" alt="picture of Adele" style="width:200px;height:200px;"
     <a href="https://play.google.com/music/preview/Tq7imsrjsxoxeudqgwf5l7rghmi?lyrics=1&utm_source=google&utm_medium=search&utm_campaign=lyrics&pcampaignid=kp-lyrics&u=0#">Full lyrics from Google Play</a>
