--- a/firsttimeindex.html
+++ b/firsttimeindex.html
@@ -35,6 +35,14 @@
     text-align: center;
     }
     </style>
+    <script>
+    var clicks = 0;
+      function myFunction() {
+        clicks++;
+        document.getElementById("changeMessage").innerHTML = "You clicked the button "+clicks+" times";
+        console.log(clicks);
+      }
+    </script>
   </head>
   <body bgcolor = #00abc1>
     <p>Fill in the blanks/wingdings</p>
@@ -54,5 +62,8 @@
   <br>
   <img src="https://lh3.googleusercontent.com/dT0SumPaV6pY2Drle9pSJW_SwXC2-8UxuN305_29zBp23SbfeU_6R2to0mcAEaLdXnOs8i4X=s192-c-e100" alt="picture of Adele" style="width:200px;height:200px;"
     <a href="https://play.google.com/music/preview/Tq7imsrjsxoxeudqgwf5l7rghmi?lyrics=1&utm_source=google&utm_medium=search&utm_campaign=lyrics&pcampaignid=kp-lyrics&u=0#">Full lyrics from Google Play</a>
+    <h1>JavaScript in Action!</h1>
+    <p id="changeMessage">Click the Button</p>
+    <button type="button" onclick="myFunction()">Try it</button>
   </body>
 </html>
