--- a/firsttimeindex.html
+++ b/firsttimeindex.html
@@ -39,7 +39,7 @@
     var clicks = 0;
       function myFunction() {
         clicks++;
-        document.getElementById("changeMessage").innerHTML = "You clicked the button "+clicks+" times";
+        document.getElementById("changeMessage").innerHTML = "You clicked the button "+clicks+" too many times";
         console.log(clicks);
       }
     </script>
