--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
   <head>
   </head>
   <body>
-  <img src="https://github.com/Tuvberg/Tuvberg.github.io" alt="Sketches for new project">
+  <img src='brainstorming_image.pdf' alt="Sketches for new project">
   </body>
 </html>
