changed to screenshots of brainstorming pdf

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
   </head>
   <body>
-  <img src='brainstorming_image.pdf' alt="Sketches for new project">
+  <img src='brainstorming_screenshot_1.pdf' alt="Brainstorming for device">
+  <img src='brainstorming_screenshot_2.pdf' alt="Brainstorming for device">
+  <img src='brainstorming_screenshot_3.pdf' alt="Brainstorming for device">
+  <img src='brainstorming_screenshot_4.pdf' alt="Brainstorming for device">
   </body>
 </html>
