--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
   </head>
   <body>
-  <img src='brainstorming_screenshot_1' alt="Brainstorming for device">
-  <img src='brainstorming_screenshot_2' alt="Brainstorming for device">
-  <img src='brainstorming_screenshot_3' alt="Brainstorming for device">
-  <img src='brainstorming_screenshot_4' alt="Brainstorming for device">
+  <img src='brainstorming_screenshot_1.jpg' alt="Brainstorming for device">
+  <img src='brainstorming_screenshot_2.jpg' alt="Brainstorming for device">
+  <img src='brainstorming_screenshot_3.jpg' alt="Brainstorming for device">
+  <img src='brainstorming_screenshot_4.jpg' alt="Brainstorming for device">
   </body>
 </html>
