--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
   </head>
   <body>
-  <img src='brainstorming_screenshot_1.png' alt="Brainstorming for device">
-  <img src='brainstorming_screenshot_2.png' alt="Brainstorming for device">
-  <img src='brainstorming_screenshot_3.png' alt="Brainstorming for device">
-  <img src='brainstorming_screenshot_4.png' alt="Brainstorming for device">
+  <img src='design_drawing.jpg' alt="Design and explanation for device"/>
+  <img src='brainstorming_screenshot_1.png' alt="Brainstorming for device"/>
+  <img src='brainstorming_screenshot_2.png' alt="Brainstorming for device"/>
+  <img src='brainstorming_screenshot_3.png' alt="Brainstorming for device"/>
+  <img src='brainstorming_screenshot_4.png' alt="Brainstorming for device"/>
   </body>
 </html>
