--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
   </head>
   <body>
-  <img src='design_drawing.jpg' alt="Design and explanation for device" style="width:500px;height:500px";/>
-  <img src='brainstorming_screenshot_1.png' alt="Brainstorming for device" style="width:200px;height:200px;"/>
-  <img src='brainstorming_screenshot_2.png' alt="Brainstorming for device" style="width:200px;height:200px;"/>
-  <img src='brainstorming_screenshot_3.png' alt="Brainstorming for device" style="width:200px;height:200px;"/>
-  <img src='brainstorming_screenshot_4.png' alt="Brainstorming for device" style="width:200px;height:200px;"/>
+  <img src='design_drawing.jpg' alt="Design and explanation for device" style="width:1000px;height:500px";/>
+  <img src='brainstorming_screenshot_1.png' alt="Brainstorming for device"/>
+  <img src='brainstorming_screenshot_2.png' alt="Brainstorming for device"/>
+  <img src='brainstorming_screenshot_3.png' alt="Brainstorming for device"/>
+  <img src='brainstorming_screenshot_4.png' alt="Brainstorming for device"/>
   </body>
 </html>
