--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
   </head>
   <body>
+  <h1>Outstanding questions</h1>
+  <p>xxx</p>
+  <h1>Drawing of device</h1>
   <img src='design_drawing.jpg' alt="Design and explanation for device" style="width:1000px;height:500px";/>
+  <h1>Brainstorming</h1>
   <img src='brainstorming_screenshot_1.png' alt="Brainstorming for device"/>
   <img src='brainstorming_screenshot_2.png' alt="Brainstorming for device"/>
   <img src='brainstorming_screenshot_3.png' alt="Brainstorming for device"/>
