--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
   </head>
   <body>
+  <h1>Progress Report</h1>
+  <p>Right now, I have the input and the output of my project ready. I've set up the power tail/relay, and tested out the Jawbone Up. Still to come, I need to figure out how to connect those two: what IFTTT to use, how to set up the google sheet, and how to make the Photon react to the google sheet. I've really enjoyed learning about IFTTT - it's a really cool and powerful tool, and I've already set up a bunch of applets for politics with my email account. One challenge I've run into is that the sleep data sends as one log, which means it all downloads at once around 8:30 AM - not the ideal time for turning off the TV. </p>
+  <img src='Relay_picture.jpg' alt="The power tail"/>
+  <img src='IFTTT_screenshot.png' alt="An IF This Then That Applet"/>
   <h1>Outstanding questions</h1>
   <p>Note: now using Jawbone, not Fitbit.</p>
   <p>-How do you build a relay into a power strip? How do you make a Photon trigger a relay?</p>
