added some data viz stuff

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
   </head>
   <body>
+  <h1>Data Vizualization</h1>
+  <p>http://flowingdata.com/2016/12/08/marital-status-by-age/ This vizualization is quite simple and effective. It does exactly what it needs to do to communicate data, and chooses a good scope of data to examine - it doesn't try to tackle a topic that is too big/complex, or too small to really make for an interesting vizualization. The colors are clear and distinct, and it's easy to tell what you're looking at. You can also break it down and just look at one category (married women, for example), which is nice. </p>
   <h1>Progress Report</h1>
   <p>Right now, I have the input and the output of my project ready. I've set up the power tail/relay, and tested out the Jawbone Up. Still to come, I need to figure out how to connect those two: what IFTTT to use, how to set up the google sheet, and how to make the Photon react to the google sheet. I've really enjoyed learning about IFTTT - it's a really cool and powerful tool, and I've already set up a bunch of applets for politics with my email account. One challenge I've run into is that the sleep data sends as one log, which means it all downloads at once around 8:30 AM - not the ideal time for turning off the TV. </p>
   <img src='Relay_picture.jpg' alt="The power tail"/>
