--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
   </head>
   <body>
   <h1>Data Vizualization</h1>
-  <p>1. Compost, Recycling, and Garbage - sense weight of bins in Caf. Look at when/how much is put in each bin
-    2. No idea how to do this w/sensors, but number of people in different areas during lunch - quantifying social divides?
-    3. Water Bottle Fillers - How often do people fill their water bottles at different locations? When?
-    4. Use sensor in library, see if they have data daily from across a school year - during what times of the year do people use the library most often? Does it correlate to when there’s the most school work?
-    5. Caf lunch lines - how long does the entree line get when there are different entrees?</p>
-<p>1. Sensors at different entrances to Balboa Park, sensing people - how often do people use each entrance? When?
-  2. Sensor at San Carlos Caltrain, sensing trains - How often does Caltrain run late? How late does it run? Are there patterns to its lateness?
-  3. CO2 levels at different parks around San Carlos - How do Carbon Dioxide levels differ from neighborhood to neighborhood? Does it relate to population density? Proximity to highways?
-  4. Heart rate monitor - How much do Lick students’ heart rates differ when reading political news? How does that compare to other types of news? Reading for homework?
-  5. Sound sensor - measure how frequently I click or type on my computer throughout the day.</p>
+  <p>1. Compost, Recycling, and Garbage - sense weight of bins in Caf. Look at when/how much is put in each bin</p>
+    <p>2. No idea how to do this w/sensors, but number of people in different areas during lunch - quantifying social divides?</p>
+    <p>3. Water Bottle Fillers - How often do people fill their water bottles at different locations? When?</p>
+    <p>4. Use sensor in library, see if they have data daily from across a school year - during what times of the year do people use the library most often? Does it correlate to when there’s the most school work?</p>
+    <p>5. Caf lunch lines - how long does the entree line get when there are different entrees?</p>
+<p>1. Sensors at different entrances to Balboa Park, sensing people - how often do people use each entrance? When?</p>
+  <p>2. Sensor at San Carlos Caltrain, sensing trains - How often does Caltrain run late? How late does it run? Are there patterns to its lateness?</p>
+  <p>3. CO2 levels at different parks around San Carlos - How do Carbon Dioxide levels differ from neighborhood to neighborhood? Does it relate to population density? Proximity to highways?</p>
+  <p>4. Heart rate monitor - How much do Lick students’ heart rates differ when reading political news? How does that compare to other types of news? Reading for homework?</p>
+  <p>5. Sound sensor - measure how frequently I click or type on my computer throughout the day.</p>
   <p>http://flowingdata.com/2016/12/08/marital-status-by-age/ This vizualization is quite simple and effective. It does exactly what it needs to do to communicate data, and chooses a good scope of data to examine - it doesn't try to tackle a topic that is too big/complex, or too small to really make for an interesting vizualization. The colors are clear and distinct, and it's easy to tell what you're looking at. You can also break it down and just look at one category (married women, for example), which is nice. </p>
   <h1>Progress Report</h1>
   <p>Right now, I have the input and the output of my project ready. I've set up the power tail/relay, and tested out the Jawbone Up. Still to come, I need to figure out how to connect those two: what IFTTT to use, how to set up the google sheet, and how to make the Photon react to the google sheet. I've really enjoyed learning about IFTTT - it's a really cool and powerful tool, and I've already set up a bunch of applets for politics with my email account. One challenge I've run into is that the sleep data sends as one log, which means it all downloads at once around 8:30 AM - not the ideal time for turning off the TV. </p>
