--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   </head>
   <body>
   <h1>Data Vizualization</h1>
-  <p>My data vizualization on <a href="Users/TuvyaBergson-Michelson19/Desktop/Desktop/DI_p5_DataViz-Master/My_EV_Graph/js/p5sketch.js">Giants batters' statcast data</a>
+  <p>My data vizualization on Giants batters' statcast data:</p>
+  <img src='Giants_data_viz' alt="Giants Data Viz"/>
   <p>1. Compost, Recycling, and Garbage - sense weight of bins in Caf. Look at when/how much is put in each bin</p>
     <p>2. No idea how to do this w/sensors, but number of people in different areas during lunch - quantifying social divides?</p>
     <p>3. Water Bottle Fillers - How often do people fill their water bottles at different locations? When?</p>
