--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <body>
   <h1>Data Vizualization</h1>
   <p>My data vizualization on Giants batters' statcast data:</p>
-  <img src='Giants_data_viz' alt="Giants Data Viz"/>
+  <img src='Giants_data_viz.png' alt="Giants Data Viz"/>
   <p>1. Compost, Recycling, and Garbage - sense weight of bins in Caf. Look at when/how much is put in each bin</p>
     <p>2. No idea how to do this w/sensors, but number of people in different areas during lunch - quantifying social divides?</p>
     <p>3. Water Bottle Fillers - How often do people fill their water bottles at different locations? When?</p>
